--- a/public/frontend/dealers/assets/css/style.css
+++ b/public/frontend/dealers/assets/css/style.css
@@ -2099,6 +2099,7 @@ button.btn-Next svg {
     padding: 4px 22px;
     border-radius: 4px;
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 .btns-wraps .btn-Prev {
