--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -752,6 +752,29 @@ section.sec-8 {
 
 
 /* PHOTO-UPLOAD-PAGE */
+
+.image-upload-main {
+    position: relative;
+}
+
+.spinner-main {
+    height: 100%;
+    background: #ffffffb0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.spinner-main h2 {
+    font-size: 20px;
+    margin-top: 10px;
+}
+
 .photo-up-sec-1 {
     position: relative;
     background: linear-gradient(90deg, rgba(25,23,56,1) 0%, rgba(30,28,61,1) 18%, rgba(31,29,62,0.9444152661064426) 45%, rgba(33,31,63,0.6615021008403361) 60%, rgba(2,0,36,0) 100%);
@@ -3250,3 +3273,9 @@ button.green-btn:hover {
     display: inline-block;
 }
 /*hamza css */
+
+
+
+
+
+
