--- a/public/frontend/dealers/assets/css/style.css
+++ b/public/frontend/dealers/assets/css/style.css
@@ -73,6 +73,7 @@ ul{
 input, button{
     border:none;
     outline:none;
+    box-shadow: none !important;
 }
 
 
@@ -1093,7 +1094,8 @@ div#next, div#next-ext {
 
 /*usama*/
 .vec-box-row {
-    height: 250px;
+    /* height: 250px; */
+    height: 180px;
     margin-bottom: 20px;
     padding: 0 15px;
 }
@@ -1114,6 +1116,7 @@ div#next, div#next-ext {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    padding-right: 0 !important;
 }
 
 .vec-box button.btn.btn-primary.ms-4 {
@@ -1583,6 +1586,13 @@ section.sec-2.productPageTn.requested-vehicles .col-lg-12.col-md-12 {
     font-size: 15px;
     font-weight: 400;
     margin-left: 20px;
+    width: 38%;
+    display: -webkit-inline-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    vertical-align: middle;
 }
 
 .p-cate-list .p-location i {
@@ -2229,6 +2239,7 @@ button.btn-Next svg {
 
 /*Vehicle Back Btn*/
 .backBtn a {
+    display: inline-block;
     text-decoration: none;
     background: #05eab5;
     color: #fff;
@@ -2238,7 +2249,7 @@ button.btn-Next svg {
 }
 
 .backBtn {
-    padding: 0 0 30px 10px;
+    padding: 0 0 30px 0;
 }
 
 .backBtn a:hover {
@@ -2458,3 +2469,126 @@ td.set-scr img {
     border-color: #05eab5;
 }
 /* vehicle index page  */
+.sliderImgVehicleDetail button.slick-arrow svg {
+    display: none;
+}
+/* Select Dropdown arrow */
+.select2-selection__rendered {
+    padding-left: 20px !important;
+}
+
+span.select2-selection__arrow b {
+    display: none !important;
+}
+
+span.select2-selection__arrow {
+    background: none;
+    width: 10px !important;
+    height: 10px !important;
+    top: 50% !important;
+    right: 20px !important;
+    transform: translateY(-60%) rotate(45deg);
+    border-right: 2px solid #000;
+    border-bottom: 2px solid #000;
+}
+
+/* Select Dropdown arrow end */
+.bottomListTitle h4 svg {
+    margin-right: 15px;
+}
+
+.bottomList ul li svg {
+    margin-right: 10px;
+}
+
+
+/* Seller Bid Card */
+.seller-bidCard {
+    padding: 30px;
+}
+
+.seller-bidCard img {
+    border-radius: 8px;
+}
+
+.seller-bidCard .bid-content h2 {
+    color: #fff !important;
+    font-weight: 600;
+}
+
+.seller-bidCard .bid-content h5 {
+    color: #fff;
+}
+
+.seller-bidCard .bid-content p {
+    color: #fff;
+}
+.seller-bidCard .bid-messageBox .prim-btn {
+    border: 2px solid transparent;
+}
+.seller-bidCard .bid-messageBox .prim-btn:hover {
+    border-color: #05eab5;
+    color: #05eab5;
+}
+.seller-bidCard .bid-messageBox h5 {
+    color: #fff;
+    font-size: 15px;
+    margin-bottom: 25px;
+    font-weight: 400;
+    text-align: left;
+}
+
+.metting-box .btn.meeting {
+    margin-right: 10px;
+}
+
+/* Seller Bid Card End */
+
+/* Dealer Bids Page */
+.requested-vehicles .vec-box h1 {
+    background: none;
+    padding: 0;
+}
+
+.requested-vehicles .vec-box h1 span {
+    background: #05eab5;
+    border-radius: 5px;
+    padding: 4px 12px;
+    display: inline-block;
+    margin-bottom: 8px;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.vec-box-big .card.card-body {
+    background: #05eab5;
+    border-radius: 10px 0 0 10px;
+}
+
+.vec-box-row {
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    padding: 0;
+    margin: 0 0 25px;
+}
+
+div.vec-box-row div.vec-box {
+    background: none !important;
+}
+
+.vec-box-row .vec-box.vec-box-big {
+    background: #414061 !important;
+}
+
+/* Dealer Bids Page End */
+
+.my-vech .btn-bids {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.my-vech .btn-bids a {
+    border-radius: 6px;
+}
