--- a/public/frontend/seller/assets/responsive.css
+++ b/public/frontend/seller/assets/responsive.css
@@ -2834,6 +2834,14 @@ ol.tagLines li {
     width: 100%;
     left: 0;
 }
+.wa-icon-footer {
+    width: 50px;
+    height: 50px;
+    bottom: 30px;
+    right: 30px;
+    font-size: 25px;
+}
+
 }
 
 @media (max-width: 575px) {
