--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -3274,7 +3274,30 @@ button.green-btn:hover {
 }
 /*hamza css */
 
-
+/* Whatsapp Icon Footer */
+.wa-icon-footer{
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #99999975;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color:#fff !important;
+}
+.wa-icon-footer:hover{
+    opacity: .85;
+}
+  /* Whatsapp Icon Footer End*/
 
 
 
