--- a/public/frontend/seller/assets/custom.css
+++ b/public/frontend/seller/assets/custom.css
@@ -682,3 +682,226 @@ input::-webkit-inner-spin-button {
 .blogs-details .blog-text {
     line-height: 2;
 }
+.blog.image img {
+  height: 200px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.blog-title h4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2; /* Number of lines to show */
+  height: 81.5px;
+}
+p.blog-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  height: 120px;
+}
+.blog-content button.btn-prim.btn-second {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  display: block;
+}
+.banner-inner-cont h1 {
+  text-align: center;
+  line-height: 1.4;
+  max-width: 1000px;
+  width: 100%;
+}
+.help-acc-sec > div > img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  margin-bottom: 30px;
+}
+.blogs-details * {
+  font-size: 17px !important;
+  font-family: Roboto Condensed !important;
+  color: #212529 !important;
+}
+.blogs-details h2,.blogs-details h2 * {
+  font-size: 30px !important;
+  margin: 40px 0 20px !important;
+  font-weight: 560 !important;
+  letter-spacing: .5px !important;
+}
+div.blogs-details a,div.blogs-details a * {
+  color: #05eab5 !important;
+}
+/* 992 to 1200 */
+@media(min-width:992px) and (max-width:1200px){
+  .blog.image img {
+      height: 130px;
+  }
+  .blogs-main .blogs-inner {
+      padding: 12px;
+  }
+  .blog-title h4 {
+      font-size: 14px;
+      height: auto;
+      padding: 0;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      height: 33px;
+  }
+  p.blog-text {
+      height: 82px;
+      font-size: 11px;
+      margin: 0;
+  }
+  .blog-content button.btn-prim.btn-second {
+      margin-bottom: 10px !important;
+  }
+  .banner-inner-cont h1 {
+      max-width: 550px;
+      margin: 0 auto;
+  }
+
+  .help-acc-sec > div > img {
+      height: 300px;
+  }
+
+  .blogs-details * {
+      font-size: 13px !important;
+      line-height: 1.6;
+  }
+
+  .blogs-details h2, .blogs-details h2 * {
+      font-size: 22px !important;
+      margin: 24px 0 8px !important;
+      font-weight: 560 !important;
+  }
+}
+/* 1201 to 1440 */
+@media(min-width:1201px) and (max-width:1400px){
+    .blog.image img {
+      height: 150px;
+    }
+    .blogs-main .blogs-inner {
+      padding: 12px;
+    }
+    .blog-title h4 {
+      font-size: 15px;
+      padding: 0;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      height: 36px;
+    }
+    p.blog-text {
+      height: 97px;
+      font-size: 13px;
+      margin: 0;
+    }
+    .blog-content button.btn-prim.btn-second {
+      margin-bottom: 10px !important;
+    }
+    .banner-inner-cont h1 {
+        max-width: 650px;
+        margin: 0 auto;
+    }
+    .help-acc-sec > div > img {
+        height: 340px;
+    }
+    .blogs-details * {
+        font-size: 15px !important;
+        line-height: 1.6;
+    }
+    .blogs-details h2, .blogs-details h2 * {
+        font-size: 25px !important;
+        margin: 30px 0 12px !important;
+        font-weight: 560 !important;
+    }
+  }
+/* 1401 to 1600 */
+@media(min-width:1401px) and (max-width:1600px){
+    .blog.image img {
+      height: 180px;
+    }
+    .blogs-main .blogs-inner {
+      padding: 12px;
+    }
+    .blog-title h4 {
+      font-size: 19px;
+      padding: 0;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      height: 46px;
+    }
+    p.blog-text {
+      height: 112px;
+      font-size: 15px;
+      margin: 0;
+    }
+    .blog-content button.btn-prim.btn-second {
+      margin-bottom: 20px !important;
+      margin-top: 30px !important;
+    }
+    .banner-inner-cont h1 {
+        max-width: 800px;
+        margin: 0 auto;
+    }
+    .help-acc-sec > div > img {
+        height: 360px;
+    }
+    .blogs-details * {
+        font-size: 16px !important;
+        line-height: 1.76;
+    }
+    .blogs-details h2, .blogs-details h2 * {
+        font-size: 27px !important;
+        margin: 30px 0 10px !important;
+    }
+}
+/* 200 to 767 */
+@media(min-width:200px) and (max-width:767px){
+  .blog.image img {
+      height: auto;
+  }
+  .blog-title h4 {
+      height: auto;
+      overflow: unset;
+      -webkit-line-clamp: unset;
+  }
+  p.blog-text {
+      height: auto;
+      overflow: unset;
+      -webkit-line-clamp: unset;
+  }
+  .help-acc-sec > div > img {
+      height: auto;
+  }
+  .blogs-details h2, .blogs-details h2 * {
+      margin: 40px 0 13px !important;
+      line-height: 1.3 !important;
+  }
+}
+/* 600 to 767 */
+@media(min-width:600px) and (max-width:767px){
+  div.blogs-main .blogs-inner {
+      flex: 0 0 97%;
+      max-width: 97%;
+  }
+}
+/* 768 to 991 */
+@media(min-width:768px) and (max-width:991px){
+  .blog.image img {
+      height: 150px;
+  }
+  .blog-title h4 {
+      height: 77px;
+  }
+  .help-acc-sec > div > img {
+      height: auto;
+  }
+  .blogs-details h2, .blogs-details h2 * {
+      margin: 34px 0 13px !important;
+      line-height: 1.3 !important;
+  }
+}
