--- a/public/frontend/dealers/assets/css/responsive.css
+++ b/public/frontend/dealers/assets/css/responsive.css
@@ -77,6 +77,45 @@ section.services-sec {
         width: 350px;
         height: 110px;
     }
+    /* blog page  */
+    .blog.image img {
+        height: 180px;
+      }
+      .blogs-main .blogs-inner {
+        padding: 12px;
+      }
+      .blog-title h4 {
+        font-size: 19px;
+        padding: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        height: 46px;
+      }
+      p.blog-text {
+        height: 112px;
+        font-size: 15px;
+        margin: 0;
+      }
+      .blog-content button.btn-prim.btn-second {
+        margin-bottom: 20px !important;
+        margin-top: 30px !important;
+      }
+      .banner-inner-cont h1 {
+          max-width: 800px;
+          margin: 0 auto;
+      }
+      .help-acc-sec > div > img {
+          height: 360px;
+      }
+      .blogs-details * {
+          font-size: 16px !important;
+          line-height: 1.76;
+      }
+      .blogs-details h2, .blogs-details h2 * {
+          font-size: 27px !important;
+          margin: 30px 0 10px !important;
+      }
+    /* blog page  */
 }
 @media only screen and (max-width: 1440px) {
     :root{
@@ -208,6 +247,45 @@ section.services-sec {
     .hw-sec:before {
         width: 95%;
     }
+    /* blog page  */
+    .blog.image img {
+        height: 150px;
+      }
+      .blogs-main .blogs-inner {
+        padding: 12px;
+      }
+      .blog-title h4 {
+        font-size: 15px;
+        padding: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        height: 36px;
+      }
+      p.blog-text {
+        height: 97px;
+        font-size: 13px;
+        margin: 0;
+      }
+      .blog-content button.btn-prim.btn-second {
+        margin-bottom: 10px !important;
+      }
+      .banner-inner-cont h1 {
+          max-width: 650px;
+          margin: 0 auto;
+      }
+      .help-acc-sec > div > img {
+          height: 340px;
+      }
+      .blogs-details * {
+          font-size: 15px !important;
+          line-height: 1.6;
+      }
+      .blogs-details h2, .blogs-details h2 * {
+          font-size: 25px !important;
+          margin: 30px 0 12px !important;
+          font-weight: 560 !important;
+      }
+    /* blog page  */
     
 }
 
@@ -324,6 +402,49 @@ div#loop .box {
 }
 /* End */
 
+/* blog page  */
+.blog.image img {
+    height: 130px;
+}
+.blogs-main .blogs-inner {
+    padding: 12px;
+}
+.blog-title h4 {
+    font-size: 14px;
+    height: auto;
+    padding: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    height: 33px;
+}
+p.blog-text {
+    height: 82px;
+    font-size: 11px;
+    margin: 0;
+}
+.blog-content button.btn-prim.btn-second {
+    margin-bottom: 10px !important;
+}
+.banner-inner-cont h1 {
+    max-width: 550px;
+    margin: 0 auto;
+}
+
+.help-acc-sec > div > img {
+    height: 300px;
+}
+
+.blogs-details * {
+    font-size: 13px !important;
+    line-height: 1.6;
+}
+
+.blogs-details h2, .blogs-details h2 * {
+    font-size: 22px !important;
+    margin: 24px 0 8px !important;
+    font-weight: 560 !important;
+}
+/* blog page  */
 
 }
 
@@ -859,6 +980,21 @@ section.sec-2.productPageTn.requested-vehicles .col-sm-4, section.sec-2.productP
 }
 
 /* End */
+/* blog page  */
+.blog.image img {
+    height: 150px;
+}
+.blog-title h4 {
+    height: 77px;
+}
+.help-acc-sec > div > img {
+    height: auto;
+}
+.blogs-details h2, .blogs-details h2 * {
+    margin: 34px 0 13px !important;
+    line-height: 1.3 !important;
+}
+/* blog page  */
 
 
 
@@ -1318,6 +1454,32 @@ section.sec-2.productPageTn span {
     background: #676692;
 }
 
+/* blog page  */
+.blog.image img {
+    height: auto;
+}
+.blog-title h4 {
+    height: auto;
+    overflow: unset;
+    -webkit-line-clamp: unset;
+}
+p.blog-text {
+    height: auto;
+    overflow: unset;
+    -webkit-line-clamp: unset;
+}
+.help-acc-sec > div > img {
+    height: auto;
+}
+.blogs-details h2, .blogs-details h2 * {
+    margin: 40px 0 13px !important;
+    line-height: 1.3 !important;
+}
+div.blogs-main .blogs-inner {
+    flex: 0 0 97%;
+    max-width: 97%;
+}
+/* blog page  */
 
 }
 
