--- a/public/frontend/dealers/assets/css/style.css
+++ b/public/frontend/dealers/assets/css/style.css
@@ -2592,3 +2592,160 @@ div.vec-box-row div.vec-box {
 .my-vech .btn-bids a {
     border-radius: 6px;
 }
+/* blog page  */
+.blogs-main .blogs-inner {
+    flex: 0 0 31%;
+    max-width: 31%;
+    border: 1px solid #cdcdcd;
+    margin: 1.16666%;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.blog.image img {
+    width: 100%;
+}
+
+.blog-title {
+    color: #000;
+    text-decoration: none;
+}
+
+.blog-title h4 {
+    padding: 20px 0px 10px;
+}
+
+.blog-title:hover {
+    color: #7977a2;
+}
+
+.blog-content {
+    text-align: center;
+}
+.blogs-details .blog-content {
+    text-align: left;
+}
+
+.blogs-details .blog-text {
+    line-height: 2;
+}
+.blog.image img {
+  height: 200px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.blog-title h4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2; /* Number of lines to show */
+  height: 81.5px;
+}
+p.blog-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  height: 120px;
+}
+.blog-content button.btn-prim.btn-second {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  display: block;
+}
+.banner-inner-cont h1 {
+  text-align: center;
+  line-height: 1.4;
+  max-width: 100%;
+  width: 100%;
+}
+.help-acc-sec > div > img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  margin-bottom: 30px;
+}
+.blogs-details * {
+  font-size: 17px !important;
+  font-family: Roboto Condensed !important;
+  color: #212529 !important;
+}
+.blogs-details h2,.blogs-details h2 * {
+  font-size: 30px !important;
+  margin: 40px 0 20px !important;
+  font-weight: 560 !important;
+  letter-spacing: .5px !important;
+}
+div.blogs-details a,div.blogs-details a * {
+  color: #05eab5 !important;
+}
+.help-acc-sec .btn-prim a{
+    background: #7977a2;
+    padding: 14px 40px;
+    font-size: 15px;
+    border-radius: 50px;
+    color: #fff;
+    text-decoration: none;
+    transition: all .3s ease;
+}
+
+.help-acc-sec .btn-prim a:hover{
+    background: #05eab5;
+}
+
+.help-acc-sec .btn-prim {
+    border-radius: 50px;
+}
+
+.help-acc-sec .btn-prim  {
+    margin: 0 auto;
+}
+.sec-title {
+    font-size: 40px;
+    font-weight: 600;
+    text-align: center;
+    color: #000;
+}
+.career-sec-cta {
+    padding: 100px 0;
+    background: #202543;
+  }
+  
+  .career-sec-cta .sec-title {
+    color: #fff;
+    margin-bottom: 20px;
+  }
+  
+  .career-sec-cta .sec-desc {
+    color: #fff;
+    max-width: 70%;
+    margin: 0 auto 30px;
+    text-align: center;
+  }
+  .career-content {
+    text-align: center;
+  }
+  .globel-btn {
+    padding: 12px 30px;
+    background: #05eab5;
+    border-radius: 100px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #fff;
+    margin: 0 auto;
+    border: 2px solid transparent;
+    line-height: 1.3;
+    display: block;
+    width: fit-content;
+    transition: all .4s ease-in;
+  }
+  
+  .globel-btn:hover {
+    color: #05eab5;
+    background: transparent;
+    border-color: #05eab5;
+  }
